examples/python-web-app/ingress.yml

# here we are saying if some\user type < foo.bar.com/bar > send them to this service call  < python-service > and this service will route us to the pod.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"                   
        backend:
          service:
            name: python-service
            port:
              number: 80
